--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "auth",
   "version": "1.0.0",
+  "author": "dicodeit",
+  "license": "ISC",
+  "description": "",
   "type": "module",
   "main": "src/index.ts",
   "scripts": {
@@ -10,9 +13,6 @@
     "migration:create": "typeorm migration:create ./database/migrations/$npm_config_name",
     "migration:run": "typeorm migration:run -d ./config/data-source"
   },
-  "author": "dicodeit",
-  "license": "ISC",
-  "description": "",
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.9",
@@ -25,5 +25,11 @@
     "pg": "^8.13.3",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.21"
+  },
+  "exports": {
+    "import": {
+      "types": "./dist/index.d.mts",
+      "default": "./dist/index.mjs"
+    }
   }
 }
